[gd_scene load_steps=16 format=3 uid="uid://dqe8mi0po860w"]

[ext_resource type="Script" path="res://Scenes/Ui/foreground.gd" id="1_nwfox"]
[ext_resource type="AudioStream" uid="uid://bqh2v610yn0sp" path="res://Audio/heartbeat-21649.mp3" id="2_k8e6y"]
[ext_resource type="Script" path="res://Scenes/Decisions/StartEndAnimations.gd" id="2_q5vtd"]
[ext_resource type="Theme" uid="uid://c6qj4gpqpe15" path="res://Themes/mainTextTheme.tres" id="3_yiai3"]
[ext_resource type="LabelSettings" uid="uid://dpe5u2i8nnie2" path="res://Themes/foreground_options_button_OptionLabel.tres" id="4_wsuwp"]
[ext_resource type="FontFile" uid="uid://8bksfvxx3q6x" path="res://Fonts/UbuntuMono/UbuntuMono-Regular.ttf" id="5_5h5es"]
[ext_resource type="FontFile" uid="uid://bbqhkqpy50ed5" path="res://Fonts/UbuntuMono/UbuntuMono-Bold.ttf" id="6_a7tgq"]
[ext_resource type="FontFile" uid="uid://cr8hbc358sdu8" path="res://Fonts/UbuntuMono/UbuntuMono-Italic.ttf" id="7_yu2im"]

[sub_resource type="Animation" id="Animation_wtrbr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/SizeControll/BackGround:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/SizeControll/BackGround/BackGroundBlur:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xqhs0"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/SizeControll/BackGround:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/SizeControll/BackGround/BackGroundBlur:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.435294)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ues67"]
_data = {
"RESET": SubResource("Animation_wtrbr"),
"default": SubResource("Animation_xqhs0")
}

[sub_resource type="Theme" id="Theme_q1pfp"]
default_font = ExtResource("5_5h5es")
default_font_size = 35

[sub_resource type="Animation" id="Animation_4lbif"]
resource_name = "dark"
length = 151.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartEndAnimations")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioPlayers/heartbeat:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_i7xgb"]
resource_name = "darkb"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartEndAnimations")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b61jc"]
_data = {
"dark": SubResource("Animation_4lbif"),
"darkb": SubResource("Animation_i7xgb")
}

[node name="Foreground" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_nwfox")

[node name="StartEndAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ues67")
}
script = ExtResource("2_q5vtd")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SizeControll" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 75.0
offset_top = 100.0
offset_right = -75.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BackGround" type="ColorRect" parent="CanvasLayer/SizeControll"]
modulate = Color(1, 1, 1, 0.976471)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.024
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -7.096
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="BackGroundBlur" type="ColorRect" parent="CanvasLayer/SizeControll/BackGround"]
modulate = Color(1, 1, 1, 0.976471)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -6.0
offset_right = 15.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="Options" type="Control" parent="CanvasLayer/SizeControll"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 393.0
offset_right = -25.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/SizeControll/Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -29.0
offset_right = -25.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80
alignment = 1

[node name="option1" type="Button" parent="CanvasLayer/SizeControll/Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("3_yiai3")

[node name="option1Label" type="Label" parent="CanvasLayer/SizeControll/Options/HBoxContainer/option1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
label_settings = ExtResource("4_wsuwp")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="option2" type="Button" parent="CanvasLayer/SizeControll/Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("3_yiai3")

[node name="option2Label" type="Label" parent="CanvasLayer/SizeControll/Options/HBoxContainer/option2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
label_settings = ExtResource("4_wsuwp")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="next_char" type="Timer" parent="CanvasLayer/SizeControll/Options"]
wait_time = 0.05

[node name="mainText" type="Control" parent="CanvasLayer/SizeControll"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 18.0
offset_right = -25.0
offset_bottom = -146.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/SizeControll/mainText"]
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 22.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_q1pfp")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = 5
theme_override_constants/outline_size = 5
theme_override_fonts/bold_font = ExtResource("6_a7tgq")
theme_override_fonts/italics_font = ExtResource("7_yu2im")
bbcode_enabled = true
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0

[node name="OutcomesCanvasLayer" type="CanvasLayer" parent="."]

[node name="OutComes" type="Control" parent="OutcomesCanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OutcomesCanvasLayer/OutComes"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -246.0
offset_top = 116.0
offset_right = -23.0
offset_bottom = -83.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2

[node name="labelONE" type="Label" parent="OutcomesCanvasLayer/OutComes/VBoxContainer"]
layout_mode = 2
label_settings = ExtResource("4_wsuwp")

[node name="labelTWO" type="Label" parent="OutcomesCanvasLayer/OutComes/VBoxContainer"]
layout_mode = 2
label_settings = ExtResource("4_wsuwp")

[node name="labelTHREE" type="Label" parent="OutcomesCanvasLayer/OutComes/VBoxContainer"]
layout_mode = 2
label_settings = ExtResource("4_wsuwp")

[node name="AudioPlayers" type="Node" parent="."]

[node name="heartbeat" type="AudioStreamPlayer2D" parent="AudioPlayers"]
stream = ExtResource("2_k8e6y")
volume_db = 5.0
max_distance = 2e+06

[node name="FullAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b61jc")
}

[connection signal="pressed" from="CanvasLayer/SizeControll/Options/HBoxContainer/option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="CanvasLayer/SizeControll/Options/HBoxContainer/option2" to="." method="_on_option_2_pressed"]
